[gd_scene load_steps=3 format=3 uid="uid://player_tscn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_playergd"]

; =============================================================================
; player.tscn – Spieler-Prefab
; Root: CharacterBody2D
; Enthaelt: Hitbox, Sprite-Platzhalter (ColorRect), AnimatedSprite2D (vorbereitet),
;           Rim-Glow (Line2D), Dodge-Trail (GPUParticles2D), Dodge-Cooldown-Timer
;
; WICHTIG: AnimatedSprite2D ist von Anfang an vorbereitet aber standardmaessig
; unsichtbar (visible=false). Wird in Phase 4 Stream H via sprite_config.tres
; auf sichtbar gesetzt sobald Spritesheets vorliegen.
;
; Spielerfarbe wird via AnimatedSprite2D.modulate gesetzt (nicht im Script
; hardcoded) – aus balance_config.tres Player-Farb-Dictionary geladen.
; =============================================================================

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_player"]
; Kapsel-Hitbox: 20px breit, 32px hoch (passt zu 48x48 Spritesheet)
radius = 10.0
height = 32.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_playergd")
; Physics-Layer 1 (Spieler) und Kollision mit Layer 2 (Terrain) + Layer 4 (Waende)
; Layer 3 (Projektile) wird extra behandelt: Spieler sind Ziel, nicht Hindernis
collision_layer = 1
collision_mask = 6

; --- Hitbox ---
[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_player")

; --- Farb-Platzhalter (aktiv wenn use_sprites = false) ---
; Wird in player.gd auf Spielerfarbe aus balance_config.tres gesetzt.
; Groesse 32x32 px zentriert – offset_left/top sind negativ da Position relativ zum Root ist.
[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
; Standardfarbe = Spieler 1 Cyan. Wird in player.gd ueberschrieben.
color = Color(0.0, 0.831, 1.0, 1.0)

; --- Animated Sprite (vorbereitet, standardmaessig unsichtbar) ---
; Wird durch player_animator.gd gesteuert (Phase 4 Stream H).
; Tile-Groesse 48x48 px, Animationen: idle/walk/dodge/attack_light/attack_heavy/cast/hit/death
; filter = false (Pixelart – kein Bilinear-Blur)
[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
; modulate wird in player.gd auf Spielerfarbe gesetzt wenn use_sprites = true

; --- Rim-Glow ---
; Line2D-Kreis um den Spieler (immer aktiv, unabhaengig vom Sprite-Modus).
; 16 Punkte reichen fuer eine glatte Ellipse bei dieser Groesse.
; Farbe = Spieler-Primaerfarbe (wird in player.gd gesetzt).
[node name="RimGlow" type="Line2D" parent="."]
points = PackedVector2Array(
	18, 0, 15.6, 8.7, 9, 15.6, 0, 18, -9, 15.6, -15.6, 8.7,
	-18, 0, -15.6, -8.7, -9, -15.6, 0, -18, 9, -15.6, 15.6, -8.7, 18, 0
)
width = 2.0
; Startfarbe Cyan (P1) – wird in player.gd ueberschrieben
default_color = Color(0.0, 0.831, 1.0, 0.8)
closed = true

; --- Dodge-Trail (Partikel) ---
; GPUParticles2D erzeugt einen kurzen Nachleuchte-Effekt beim Dodge.
; emitting = false – wird nur whrend des Dodges aktiviert.
[node name="DodgeTrail" type="GPUParticles2D" parent="."]
emitting = false
amount = 8
lifetime = 0.3
one_shot = true
z_index = -1

; --- Dodge-Cooldown-Timer ---
; 0.8s Cooldown (lt. DESIGN.md Balance-Parameter).
; wait_time wird in player.gd aus balance_config.tres gelesen und hier
; ueberschrieben – dieser Wert ist nur der Fallback-Default.
[node name="DodgeCooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = false

; --- Statuseffekt-HUD-Platzhalter ---
; Wird in Phase 2 Stream B durch status_effect_hud.tscn ersetzt.
; Schwebt 40px ueber dem Charakter-Sprite.
[node name="StatusEffectSlot" type="Node2D" parent="."]
position = Vector2(0, -40)
